src/objects/OrderApi__EPayment__c.object
<CustomObject>
    <fields>
        <fullName>OrderApi__Start_Date__c</fullName>
        <description>**Required Conditionally** The date to start the Payment Schedule, required to create new payment schedules from a E-Payment transaction.</description>
        <inlineHelpText>**Required Conditionally** The date to start the Payment Schedule, required to create new payment schedules from a E-Payment transaction.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__State__c</fullName>
        <description>The current state of the transaction</description>
        <inlineHelpText>The current state of the transaction</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Status__c</fullName>
        <description>**System Calculated** User-friendly status display with icon indicating success/failure of the Payment Activity.</description>
        <formula>IF (OrderApi__Succeeded__c, &quot;Success&quot;,
            IF (OrderApi__Has_Errors__c, &quot;Unsuccessful&quot;,
            IF (OrderApi__Cancelled__c,&quot;Cancelled&quot;,
            &quot;In-Progress&quot; &amp; &quot;  &quot; &amp; &quot;Pending&quot;)))</formula>
        <inlineHelpText>**System Calculated** User-friendly status display with icon indicating success/failure of the Payment Activity.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Storage_State__c</fullName>
        <description>**System Calculated** The storage state of the payment method used in the api transaction.</description>
        <inlineHelpText>**System Calculated** The storage state of the payment method used in the api transaction.</inlineHelpText>
        <label>Storage State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Succeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** The transaction succeeded without error.</description>
        <inlineHelpText>**System Calculated** The transaction succeeded without error.</inlineHelpText>
        <label>Succeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total amount of the epayment transaction.</description>
        <inlineHelpText>The total amount of the epayment transaction.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Transaction_Token__c</fullName>
        <description>**System Calculated** The token used to transact with the gateway.</description>
        <inlineHelpText>**System Calculated** The token used to transact with the gateway.</inlineHelpText>
        <label>Transaction Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Transaction_Type__c</fullName>
        <description>**System Calculated** The transaction type identified in the response of the api transaction.</description>
        <inlineHelpText>**System Calculated** The transaction type identified in the response of the api transaction.</inlineHelpText>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Verification_Value__c</fullName>
        <description>**System Calculated** The verification value of the payment method used in the api transaction.</description>
        <inlineHelpText>**System Calculated** The verification value of the payment method used in the api transaction.</inlineHelpText>
        <label>Verification Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Year__c</fullName>
        <description>**System Calculated** The credit card expiration year (YYYY).</description>
        <inlineHelpText>**System Calculated** The credit card expiration year (YYYY).</inlineHelpText>
        <label>Exp Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ePayment</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Status__c</columns>
        <columns>OrderApi__Transaction_Type__c</columns>
        <columns>OrderApi__Gateway_Transaction_ID__c</columns>
        <columns>OrderApi__Deposit_Account__c</columns>
        <columns>OrderApi__Business_Group__c</columns>
        <columns>OrderApi__Batch__c</columns>
        <columns>OrderApi__Payment_Gateway__c</columns>
        <columns>OrderApi__Full_Name__c</columns>
        <columns>OrderApi__Date__c</columns>
        <columns>OrderApi__Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ePayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>